// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Search renders search form with default state 1`] = `
<div>
  <div
    class="sc-ilxdoe esYEGG"
  >
    <div
      class="sc-jIBmdN xGYZG"
    >
      <div
        class="sc-hhyLtw"
      >
        <div
          class="sc-fHekdU dssWqK"
        >
          <label
            class="sc-blmETN bLNVuV"
            for="photo-sort-order"
          >
            Сортировать
          </label>
          <select
            aria-hidden="true"
            id="photo-sort-order"
            name="order"
            style="position: absolute; opacity: 0; pointer-events: none; width: 0px; height: 0px;"
            tabindex="-1"
          >
            <option
              value="orderDownByTakenAt"
            >
              Вначале новые
            </option>
            <option
              value="orderUpByTakenAt"
            >
              Вначале старые
            </option>
            <option
              value="orderDownByEdited"
            >
              Последние загруженные
            </option>
          </select>
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="sc-ifyqMW euLUzX"
            type="button"
          >
            Вначале новые
          </button>
        </div>
      </div>
      <div
        class="sc-gYrpUK izYNyN"
      >
        <label
          class="sc-cCzKKD cAVOjz"
          for="photo-filter-date"
        >
          Период
        </label>
        <input
          aria-expanded="false"
          class="sc-ckdFjQ dpwCAm"
          id="photo-filter-date"
          placeholder="Выберите период"
          readonly=""
          type="text"
          value=""
        />
      </div>
      <div
        class="sc-hhyLtw"
      >
        <label>
          Страна
          <input
            id="photo-filter-country"
            name="countryInput"
            placeholder="Введите страну и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-dmXXqF hzeltJ"
        />
      </div>
      <div
        class="sc-hhyLtw"
      >
        <label>
          Город
          <input
            id="photo-filter-city"
            name="cityInput"
            placeholder="Введите город и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-dmXXqF hzeltJ"
        />
      </div>
      <div
        class="sc-hhyLtw"
      >
        <label>
          Теги
          <input
            id="photo-filter-tags"
            name="tagInput"
            placeholder="Введите тег и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-dmXXqF hzeltJ"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Search renders with different queryParams renders with all params 1`] = `
<div>
  <div
    class="sc-ilxdoe esYEGG"
  >
    <div
      class="sc-jIBmdN xGYZG"
    >
      <div
        class="sc-hhyLtw"
      >
        <div
          class="sc-fHekdU dssWqK"
        >
          <label
            class="sc-blmETN bLNVuV"
            for="photo-sort-order"
          >
            Сортировать
          </label>
          <select
            aria-hidden="true"
            id="photo-sort-order"
            name="order"
            style="position: absolute; opacity: 0; pointer-events: none; width: 0px; height: 0px;"
            tabindex="-1"
          >
            <option
              value="orderDownByTakenAt"
            >
              Вначале новые
            </option>
            <option
              value="orderUpByTakenAt"
            >
              Вначале старые
            </option>
            <option
              value="orderDownByEdited"
            >
              Последние загруженные
            </option>
          </select>
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="sc-ifyqMW euLUzX"
            type="button"
          >
            Последние загруженные
          </button>
        </div>
      </div>
      <div
        class="sc-gYrpUK izYNyN"
      >
        <label
          class="sc-cCzKKD cAVOjz"
          for="photo-filter-date"
        >
          Период
        </label>
        <input
          aria-expanded="false"
          class="sc-ckdFjQ dpwCAm"
          id="photo-filter-date"
          placeholder="Выберите период"
          readonly=""
          type="text"
          value="2024-01 — 2024-12"
        />
      </div>
      <div
        class="sc-hhyLtw"
      >
        <label>
          Страна
          <input
            id="photo-filter-country"
            name="countryInput"
            placeholder="Введите страну и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-dmXXqF hzeltJ"
        />
      </div>
      <div
        class="sc-hhyLtw"
      >
        <label>
          Город
          <input
            id="photo-filter-city"
            name="cityInput"
            placeholder="Введите город и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-dmXXqF hzeltJ"
        />
      </div>
      <div
        class="sc-hhyLtw"
      >
        <label>
          Теги
          <input
            id="photo-filter-tags"
            name="tagInput"
            placeholder="Введите тег и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-dmXXqF hzeltJ"
        >
          <span
            class="sc-khjJjO jMVqNg"
          >
            foo
            <button
              aria-label="Удалить тег foo"
              class="sc-fLsdZH bmzcfQ"
              type="button"
            >
              ×
            </button>
          </span>
          <span
            class="sc-khjJjO jMVqNg"
          >
            bar
            <button
              aria-label="Удалить тег bar"
              class="sc-fLsdZH bmzcfQ"
              type="button"
            >
              ×
            </button>
          </span>
          <span
            class="sc-khjJjO jMVqNg"
          >
            baz
            <button
              aria-label="Удалить тег baz"
              class="sc-fLsdZH bmzcfQ"
              type="button"
            >
              ×
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search renders with different queryParams renders with date range params 1`] = `
<div>
  <div
    class="sc-ilxdoe esYEGG"
  >
    <div
      class="sc-jIBmdN xGYZG"
    >
      <div
        class="sc-hhyLtw"
      >
        <div
          class="sc-fHekdU dssWqK"
        >
          <label
            class="sc-blmETN bLNVuV"
            for="photo-sort-order"
          >
            Сортировать
          </label>
          <select
            aria-hidden="true"
            id="photo-sort-order"
            name="order"
            style="position: absolute; opacity: 0; pointer-events: none; width: 0px; height: 0px;"
            tabindex="-1"
          >
            <option
              value="orderDownByTakenAt"
            >
              Вначале новые
            </option>
            <option
              value="orderUpByTakenAt"
            >
              Вначале старые
            </option>
            <option
              value="orderDownByEdited"
            >
              Последние загруженные
            </option>
          </select>
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="sc-ifyqMW euLUzX"
            type="button"
          >
            Вначале новые
          </button>
        </div>
      </div>
      <div
        class="sc-gYrpUK izYNyN"
      >
        <label
          class="sc-cCzKKD cAVOjz"
          for="photo-filter-date"
        >
          Период
        </label>
        <input
          aria-expanded="false"
          class="sc-ckdFjQ dpwCAm"
          id="photo-filter-date"
          placeholder="Выберите период"
          readonly=""
          type="text"
          value="15-01-2024 — 31-12-2024"
        />
      </div>
      <div
        class="sc-hhyLtw"
      >
        <label>
          Страна
          <input
            id="photo-filter-country"
            name="countryInput"
            placeholder="Введите страну и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-dmXXqF hzeltJ"
        />
      </div>
      <div
        class="sc-hhyLtw"
      >
        <label>
          Город
          <input
            id="photo-filter-city"
            name="cityInput"
            placeholder="Введите город и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-dmXXqF hzeltJ"
        />
      </div>
      <div
        class="sc-hhyLtw"
      >
        <label>
          Теги
          <input
            id="photo-filter-tags"
            name="tagInput"
            placeholder="Введите тег и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-dmXXqF hzeltJ"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Search renders with different queryParams renders with order param 1`] = `
<div>
  <div
    class="sc-ilxdoe esYEGG"
  >
    <div
      class="sc-jIBmdN xGYZG"
    >
      <div
        class="sc-hhyLtw"
      >
        <div
          class="sc-fHekdU dssWqK"
        >
          <label
            class="sc-blmETN bLNVuV"
            for="photo-sort-order"
          >
            Сортировать
          </label>
          <select
            aria-hidden="true"
            id="photo-sort-order"
            name="order"
            style="position: absolute; opacity: 0; pointer-events: none; width: 0px; height: 0px;"
            tabindex="-1"
          >
            <option
              value="orderDownByTakenAt"
            >
              Вначале новые
            </option>
            <option
              value="orderUpByTakenAt"
            >
              Вначале старые
            </option>
            <option
              value="orderDownByEdited"
            >
              Последние загруженные
            </option>
          </select>
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="sc-ifyqMW euLUzX"
            type="button"
          >
            Вначале старые
          </button>
        </div>
      </div>
      <div
        class="sc-gYrpUK izYNyN"
      >
        <label
          class="sc-cCzKKD cAVOjz"
          for="photo-filter-date"
        >
          Период
        </label>
        <input
          aria-expanded="false"
          class="sc-ckdFjQ dpwCAm"
          id="photo-filter-date"
          placeholder="Выберите период"
          readonly=""
          type="text"
          value=""
        />
      </div>
      <div
        class="sc-hhyLtw"
      >
        <label>
          Страна
          <input
            id="photo-filter-country"
            name="countryInput"
            placeholder="Введите страну и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-dmXXqF hzeltJ"
        />
      </div>
      <div
        class="sc-hhyLtw"
      >
        <label>
          Город
          <input
            id="photo-filter-city"
            name="cityInput"
            placeholder="Введите город и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-dmXXqF hzeltJ"
        />
      </div>
      <div
        class="sc-hhyLtw"
      >
        <label>
          Теги
          <input
            id="photo-filter-tags"
            name="tagInput"
            placeholder="Введите тег и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-dmXXqF hzeltJ"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Search renders with different queryParams renders with tags param 1`] = `
<div>
  <div
    class="sc-ilxdoe esYEGG"
  >
    <div
      class="sc-jIBmdN xGYZG"
    >
      <div
        class="sc-hhyLtw"
      >
        <div
          class="sc-fHekdU dssWqK"
        >
          <label
            class="sc-blmETN bLNVuV"
            for="photo-sort-order"
          >
            Сортировать
          </label>
          <select
            aria-hidden="true"
            id="photo-sort-order"
            name="order"
            style="position: absolute; opacity: 0; pointer-events: none; width: 0px; height: 0px;"
            tabindex="-1"
          >
            <option
              value="orderDownByTakenAt"
            >
              Вначале новые
            </option>
            <option
              value="orderUpByTakenAt"
            >
              Вначале старые
            </option>
            <option
              value="orderDownByEdited"
            >
              Последние загруженные
            </option>
          </select>
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="sc-ifyqMW euLUzX"
            type="button"
          >
            Вначале новые
          </button>
        </div>
      </div>
      <div
        class="sc-gYrpUK izYNyN"
      >
        <label
          class="sc-cCzKKD cAVOjz"
          for="photo-filter-date"
        >
          Период
        </label>
        <input
          aria-expanded="false"
          class="sc-ckdFjQ dpwCAm"
          id="photo-filter-date"
          placeholder="Выберите период"
          readonly=""
          type="text"
          value=""
        />
      </div>
      <div
        class="sc-hhyLtw"
      >
        <label>
          Страна
          <input
            id="photo-filter-country"
            name="countryInput"
            placeholder="Введите страну и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-dmXXqF hzeltJ"
        />
      </div>
      <div
        class="sc-hhyLtw"
      >
        <label>
          Город
          <input
            id="photo-filter-city"
            name="cityInput"
            placeholder="Введите город и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-dmXXqF hzeltJ"
        />
      </div>
      <div
        class="sc-hhyLtw"
      >
        <label>
          Теги
          <input
            id="photo-filter-tags"
            name="tagInput"
            placeholder="Введите тег и нажмите Enter"
            type="text"
          />
        </label>
        <div
          class="sc-dmXXqF hzeltJ"
        >
          <span
            class="sc-khjJjO jMVqNg"
          >
            landscape
            <button
              aria-label="Удалить тег landscape"
              class="sc-fLsdZH bmzcfQ"
              type="button"
            >
              ×
            </button>
          </span>
          <span
            class="sc-khjJjO jMVqNg"
          >
            portrait
            <button
              aria-label="Удалить тег portrait"
              class="sc-fLsdZH bmzcfQ"
              type="button"
            >
              ×
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
